Remove IE specific scrollbar hiding CSS since we are no longer going out of our way to support IE.

--- a/src/css/myt.css
+++ b/src/css/myt.css
@@ -4,9 +4,6 @@ input,textarea,select{box-sizing:border-box;-moz-box-sizing:border-box;}
 input.mytNativeInput:not([type=button]), textarea.mytNativeInput{margin:0px;padding:1px;border:0px none;}
 select.mytNativeInput{margin:0px;}
 
-/* Hide scrollbars as much as possible in IE. */
-.myt{-ms-overflow-style:-ms-autohiding-scrollbar;}
-
 .mytTextTabSliderLabel{font-size:16px; font-weight:bold;}
 .mytButtonText{font-size:12px; font-weight:bold;}
 
